--- a/WpfDemo/MainWindow.xaml
+++ b/WpfDemo/MainWindow.xaml
@@ -1,12 +1,170 @@
-﻿<Window x:Class="WpfDemo.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfDemo"
+        xmlns:RuntimeBinder="clr-namespace:Microsoft.CSharp.RuntimeBinder;assembly=Microsoft.CSharp" x:Class="WpfDemo.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="MainWindow" Height="400.434" Width="300.132" BorderThickness="0">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+            <GradientStop Color="Black" Offset="0.8"/>
+            <GradientStop Color="White"/>
+        </LinearGradientBrush>
+    </Window.Background>
+    <StackPanel Width="300">
+        <TextBlock 
+            TextWrapping="Wrap" 
+            Text="Login" 
+            TextAlignment="Center" 
+            FontSize="40" 
+            FontFamily="Freestyle Script" 
+            FontWeight="Bold" 
+            TextDecorations="{x:Null}">
+            <TextBlock.Foreground>
+                <RadialGradientBrush>
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="Red" Offset="0.5"/>
+                </RadialGradientBrush>
+            </TextBlock.Foreground>
+        </TextBlock>
+        <StackPanel 
+            Orientation="Horizontal" 
+            Margin="0,40,0,20">
+            <TextBlock 
+                TextWrapping="Wrap"
+                Text="Nom :" 
+                FontSize="20" 
+                TextAlignment="Center"
+                Width="70" 
+                Margin="20,0,0,0" 
+                HorizontalAlignment="Left" 
+                FontFamily="Freestyle Script" 
+                FontWeight="Bold" 
+                TextDecorations="Underline">
+                <TextBlock.Foreground>
+                    <RadialGradientBrush>
+                        <GradientStop Color="Black" Offset="0"/>
+                        <GradientStop Color="Red" Offset="0.5"/>
+                    </RadialGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <TextBox  
+                TextWrapping="Wrap" 
+                Width="170" 
+                HorizontalAlignment="Right">
+                <TextBox.BorderBrush>
+                    <LinearGradientBrush 
+                        EndPoint="0.5,1" 
+                        MappingMode="RelativeToBoundingBox" 
+                        StartPoint="0.5,0">
+                        <GradientStop Color="Black"/>
+                        <GradientStop Color="Red" Offset="1"/>
+                    </LinearGradientBrush>
+                </TextBox.BorderBrush>
+            </TextBox>
+        </StackPanel>
+        <StackPanel 
+            Orientation="Horizontal" 
+            Margin="0,0,0,50">
+            <TextBlock 
+                TextWrapping="Wrap" 
+                Text="Pwd :" 
+                FontSize="20" 
+                TextAlignment="Center" 
+                Width="70" 
+                Margin="20,0,0,0" 
+                HorizontalAlignment="Left" 
+                FontFamily="Freestyle Script" 
+                FontWeight="Bold" 
+                TextDecorations="Underline">
+                <TextBlock.Foreground>
+                    <RadialGradientBrush>
+                        <GradientStop Color="Black" Offset="0"/>
+                        <GradientStop Color="Red" Offset="0.5"/>
+                    </RadialGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <TextBox  
+                TextWrapping="Wrap"  
+                Width="170" 
+                HorizontalAlignment="Right">
+                <TextBox.BorderBrush>
+                    <LinearGradientBrush 
+                        EndPoint="0.5,1" 
+                        StartPoint="0.5,0">
+                        <GradientStop Color="Black" Offset="0"/>
+                        <GradientStop Color="Red" Offset="1"/>
+                    </LinearGradientBrush>
+                </TextBox.BorderBrush>
+            </TextBox>
+        </StackPanel>
+        <StackPanel 
+            Orientation="Vertical" 
+            Margin="0,0,30,0">
+            <Button 
+                Content="OK"
+                Width="100" 
+                HorizontalAlignment="Right" 
+                FontSize="20" 
+                RenderTransformOrigin="1,0" 
+                BorderBrush="Red" 
+                Foreground="Red" 
+                FontFamily="Freestyle Script" 
+                FontWeight="Bold" 
+                BorderThickness="2" >
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="Cursor" Value="Hand"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+                <Button.Background>
+                    <RadialGradientBrush>
+                        <GradientStop Color="Black" Offset="1"/>
+                        <GradientStop Color="White" Offset="0.5"/>
+                    </RadialGradientBrush>
+                </Button.Background>
+                <Button.Effect>
+                    <DropShadowEffect 
+                        Color="#FFFD0F0F" 
+                        Direction="325" 
+                        Opacity="0.5" 
+                        ShadowDepth="10"/>
+                </Button.Effect>
+            </Button>
+            <Button 
+                Content="CANCEL" 
+                Width="100" 
+                HorizontalAlignment="Right"
+                FontSize="20" 
+                Margin="0,10,0,0" 
+                RenderTransformOrigin="0.5,0.5" 
+                BorderBrush="Red" 
+                Foreground="Red" 
+                FontFamily="Freestyle Script" 
+                FontWeight="Bold" 
+                BorderThickness="2" 
+                Cursor="Hand">
+                <Button.Background>
+                    <RadialGradientBrush>
+                        <GradientStop Color="Black" Offset="0.5"/>
+                        <GradientStop Color="White" Offset="1"/>
+                    </RadialGradientBrush>
+                </Button.Background>
+                <Button.Effect>
+                    <DropShadowEffect 
+                        BlurRadius="10" 
+                        Color="#FFF50808" 
+                        Direction="325" 
+                        Opacity="0.5" 
+                        ShadowDepth="10"/>
+                </Button.Effect>
+            </Button>
+        </StackPanel>
+    </StackPanel>
 </Window>
